--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="social-links mt-3 text-center">
       <a href="https://www.instagram.com/xdil.26/" class="instagram"><i class="bx bxl-instagram"></i></a>
       <a href="https://github.com/farhanudin26" class="github"><i class="bx bxl-github"></i></a>
-      <a href="https://linkedin.com/in/hann-stars-13ab0a2a5" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/muhamad-farhanudin-13ab0a2a5/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       <a href="https://wa.me/6283192630720" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
     </div>
     </div>
@@ -83,10 +83,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Saya adalah seorang Backend developer yang berdedikasi dan berorientasi pada hasil dengan pengalaman dalam
-            IT.Saya Memiliki Rasa keingin tahuan yang tinggi, komunikasi yang baik,
-            dan kemampuan untuk bekerja dalam tim maupun secara mandiri. Saya selalu mencari tantangan baru dan
-            kesempatan untuk berkembang dalam karir saya. </p>
+          <p>Saya adalah seorang Backend Developer yang berdedikasi dan berorientasi pada hasil, dengan pengalaman yang mendalam di bidang Teknologi Informasi. Memiliki rasa ingin tahu yang tinggi, keterampilan komunikasi yang baik, dan kemampuan untuk bekerja secara efektif baik dalam tim maupun secara mandiri. Saya selalu mencari tantangan baru dan kesempatan untuk terus berkembang dalam karir profesional saya, serta berkomitmen untuk memberikan kontribusi yang signifikan dalam setiap proyek yang saya jalani. </p>
         </div>
 
         <div class="row">
@@ -146,9 +143,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">75%</i></span>
+              <span class="skill">PHP <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">PYTHON <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -203,6 +207,14 @@
                 <li>Pelajari Express.JS dan pelajari berbagai fungsi array.</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Praktik Kerja Lapangan</h4>
+              <h5>08 juli - 30 Desember 2023</h5>
+              <ul>
+                <li>Mengerjakan Project internal dari perusahan PT StarCore yaitu membuat website Workhub V2 dan membuat CRUD api ticket service</li>
+              </ul>
+            </div>
+
           </div>
         </div>
       </div>
@@ -279,6 +291,41 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/P6.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/P6.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="Sertifikat belajar AWS Cloud "><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row d-flex justify-content-start">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/P7.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/P7.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Sertifikat Praktik kerja lapangan di PT Starcore selama 6 bulan"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row d-flex justify-content-start">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/0c4e5d717754fd19392a4ea9044e3a09course_certificate_4500591dri2wpj.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/0c4e5d717754fd19392a4ea9044e3a09course_certificate_4500591dri2wpj.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Menyelesaikan sebuah study kasus"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
 
         </div>
 
