--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <span>sertifikat</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
           <!-- Tombol Download CV -->
-        <li> <a href="https://www.cakeresume.com/pdf/s--y7LNor5XqedbwV6WFyshJQ--/9GryJ.pdf" class="btn btn-outline-primary">Download CV</a></li>
+        <li> <a href="https://www.cake.me/pdf/s--uPZZoH7bgxpN1WgYLEzomw--/3VWPP8.pdf" class="btn btn-outline-primary">Download CV</a></li>
       </ul>
     </nav><!-- .nav-menu -->
     </div>
