--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -38,31 +38,28 @@
   <header id="header">
     <div class="d-flex flex-column">
 
-      <<div class="profile">
-        <img src="assets/img/profil.jpg" alt="" class="img-fluid">
+      <div class="profile">
+        <img src="assets/img/profile-cv.jpg" alt="" class="img-fluid">
         <h4 class="text-light"><a href="index.html">Muhamad Farhanudin</a></h4>
-    </div>
 
-    <div class="social-links mt-3 text-center">
-      <a href="https://www.instagram.com/xdil.26/" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="https://github.com/farhanudin26" class="github"><i class="bx bxl-github"></i></a>
-      <a href="https://www.linkedin.com/in/muhamad-farhanudin-13ab0a2a5/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      <a href="https://wa.me/6283192630720" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-    </div>
-    </div>
+        <div class="social-links mt-3 text-center">
+          <a href="https://www.instagram.com/xdil.26/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://github.com/farhanudin26" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/farhanudin26/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://wa.me/6283192630720" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        </div>
+      </div>
 
-    <nav id="navbar" class="nav-menu navbar">
-      <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
-            <span>sertifikat</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-          <!-- Tombol Download CV -->
-        <li> <a href="https://www.cake.me/pdf/s--uPZZoH7bgxpN1WgYLEzomw--/3VWPP8.pdf" class="btn btn-outline-primary">Download CV</a></li>
-      </ul>
-    </nav><!-- .nav-menu -->
+      <nav id="navbar" class="nav-menu navbar">
+        <ul>
+          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Sertifikat</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="https://drive.usercontent.google.com/download?id=1_G54M3YH9Ddzs7RYPGhXYSB1j7GQDuRL&export=download&authuser=0" class="btn btn-outline-primary">Download CV</a></li>
+        </ul>
+      </nav>
     </div>
   </header><!-- End Header -->
 
@@ -74,16 +71,14 @@
     </div>
   </section><!-- End Hero -->
 
-
   <main id="main">
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-
         <div class="section-title">
           <h2>About</h2>
-          <p>Saya adalah seorang Backend Developer yang berdedikasi dan berorientasi pada hasil, dengan pengalaman yang mendalam di bidang Teknologi Informasi. Memiliki rasa ingin tahu yang tinggi, keterampilan komunikasi yang baik, dan kemampuan untuk bekerja secara efektif baik dalam tim maupun secara mandiri. Saya selalu mencari tantangan baru dan kesempatan untuk terus berkembang dalam karir profesional saya, serta berkomitmen untuk memberikan kontribusi yang signifikan dalam setiap proyek yang saya jalani. </p>
+          <p>Saya adalah seorang Backend Developer yang berdedikasi dan berorientasi pada hasil, dengan pengalaman yang mendalam di bidang Teknologi Informasi. Memiliki rasa ingin tahu yang tinggi, keterampilan komunikasi yang baik, dan kemampuan untuk bekerja secara efektif baik dalam tim maupun secara mandiri.</p>
         </div>
 
         <div class="row">
@@ -98,7 +93,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Nama:</strong> <span>Muhamad Farhanudin</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Tanggal Lahir: </strong> <span>26 April 2007</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Jenis Kelamin: </strong> <span>Laki-laki</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Alamat: </strong>Kp.Cirantan, Kecamatan Ciawi-Bogor-Jawa Barat</li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Alamat: </strong> Kp. Cirantan, Kecamatan Ciawi - Bogor - Jawa Barat</li>
                 </ul>
               </div>
             </div>
@@ -106,12 +101,13 @@
         </div>
       </div>
     </section>
-    <!-- skils -->
+
+    <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Bahasa pemograman yang saat ini dikuasai</p>
+          <p>Bahasa pemrograman yang saat ini dikuasai</p>
         </div>
 
         <div class="row skills-content">
@@ -119,16 +115,14 @@
             <div class="progress">
               <span class="skill">HTML <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">CSS <i class="val">87%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100">
-                </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -137,23 +131,21 @@
             <div class="progress">
               <span class="skill">JavaScript <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">PHP <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+
             <div class="progress">
-              <span class="skill">PYTHON <i class="val">80%</i></span>
+              <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
@@ -161,64 +153,69 @@
       </div>
     </section><!-- End Skills Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-        <div class="section-title">
-          <h2>Resume</h2>
-          <p>Saya sekolah di Smk Wikrama bogor untuk belajar dan menambah pengetahuan di dunia IT (terutama Back-End
-            developer).</p>
+<!-- ======= Resume Section ======= -->
+<section id="resume" class="resume">
+  <div class="container">
+    <div class="section-title">
+      <h2>Resume</h2>
+      <p>Saya sekolah di SMK Wikrama Bogor untuk belajar dan menambah pengetahuan di dunia IT (terutama Back-End developer).</p>
+    </div>
+
+    <div class="row">
+      <!-- Kolom Kiri -->
+      <div class="col-lg-6" data-aos="fade-up">
+        <h3 class="resume-title">Pendidikan di SMK Wikrama Bogor</h3>
+        <div class="resume-item ps-4">
+          <h4>Belajar HTML, CSS, dan PHP</h4>
+          <h5>2022 - 2023</h5>
+          <p><em>Awal masuk sekolah saya belajar dasar HTML, CSS dan PHP.</em></p>
+          <ul>
+            <li>Di PHP saya belajar Programming Fundamental, OOP, dan MVC.</li>
+          </ul>
         </div>
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Pendidikan di Smk Wikrama Bogor</h3>
-            <div class="resume-item">
-              <h4>Belajar html,css,dan php</h4>
-              <h5>2022 - 2023</h5>
-              <p><em>Awal masuk sekolah saya belajar dasar html,css dan php.</em></p>
-              <li>di php saya belajar programming Fundamental in php,oop, dan mvc.</li>
-            </div>
-            <div class="resume-item">
-              <h4>Kelas 11 saya belajar Laravel,Lumen dan ReactJs</h4>
-              <h5>2023 - 2024</h5>
-              <ul>
-                <p><em>saya memperdalam logic saya dan belajar dasar bahasa pemograman JavaScript.</em></p>
-                <li>Laravel saya membuat Aplikasi Apotek(Full Stack).</li>
-                <li>Lumen saya membuat Api-inventaris(Back-End).  <a href="https://documenter.getpostman.com/view/31019033/2sA3JNb19a"> (Project)</a></li>
-                <li>Dan ReactJs saya membuat Consume Api-inventaris(Front-end).</li> 
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Mengikuti class industri</h3>
-            <div class="resume-item">
-              <h4>belajar vuejs(frontend)</h4>
-              <h5>30 oktober - 3 November 2023</h5>
-              <ul>
-                <li>Pelajari Vue.js untuk membuat Rumah Sakit Situs web layanan dan pelajari cara menggunakan API.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Belajar framework JavaScript(back-end)</h4>
-              <h5>6 - 10 November 2023</h5>
-              <ul>
-                <li>Pelajari Express.JS dan pelajari berbagai fungsi array.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Praktik Kerja Lapangan</h4>
-              <h5>08 juli - 30 Desember 2023</h5>
-              <ul>
-                <li>Mengerjakan Project internal dari perusahan PT StarCore yaitu membuat website Workhub V2 dan membuat CRUD api ticket service</li>
-              </ul>
-            </div>
-
-          </div>
+        <div class="resume-item ps-4">
+          <h4>Belajar Laravel, Lumen dan ReactJs</h4>
+          <h5>2023 - 2024</h5>
+          <ul>
+            <li>Laravel: membuat aplikasi Apotek (Full Stack).</li>
+            <li>Lumen: membuat API Inventaris (Back-End). 
+              <a href="https://documenter.getpostman.com/view/31019033/2sA3JNb19a">(Project)</a>
+            </li>
+            <li>ReactJs: membuat consume API Inventaris (Front-End).</li>
+          </ul>
         </div>
       </div>
-    </section><!-- End Resume Section -->
+
+      <!-- Kolom Kanan -->
+      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="resume-title">Mengikuti Kelas Industri</h3>
+        <div class="resume-item ps-4">
+          <h4>Vue.js (Frontend)</h4>
+          <h5>30 Oktober - 3 November 2023</h5>
+          <ul>
+            <li>Membuat website layanan rumah sakit dan belajar penggunaan API.</li>
+          </ul>
+        </div>
+        <div class="resume-item ps-4">
+          <h4>Express.js (Backend)</h4>
+          <h5>6 - 10 November 2023</h5>
+          <ul>
+            <li>Belajar Express.js dan penggunaan fungsi array.</li>
+          </ul>
+        </div>
+
+        <h3 class="resume-title">Praktik Kerja Lapangan</h3>
+        <div class="resume-item ps-4">
+          <h4>Backend Developer</h4>
+          <h5>8 Juli - 30 Desember 2023</h5>
+          <p><em>Menjalani PKL di perusahaan StarCore Analytics dan berkontribusi dalam project internal perusahaan.</em></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Resume Section -->
+
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
