--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Farhanudin | Backend Developer | Portofolio SMK Wikrama</title>
+  <meta name="description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Seorang Backend Developer berpengalaman di Python, Laravel, dan FastAPI.">
+  <meta name="keywords" content="Farhanudin, Backend Developer, Portofolio, Python, Laravel, FastAPI, SMK Wikrama, Web Developer">
+  <meta name="author" content="Muhamad Farhanudin" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Farhanudin | Portofolio Backend Developer" />
+  <meta property="og:description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Berpengalaman membangun aplikasi Laravel, FastAPI, Python.">
+  <meta property="og:url" content="https://farhanudin26.github.io/" />
+  <meta property="og:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Farhanudin | Backend Developer" />
+  <meta name="twitter:description" content="Portofolio online Farhanudin, Backend Developer SMK Wikrama Bogor." />
+  <meta name="twitter:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg" />
 
   <!-- Favicons -->
   <link href="assets/img/log2.png" rel="icon">
