Add Google Analytics GA4

--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
   <title>Farhanudin | Backend Developer | Portofolio SMK Wikrama</title>
   <meta name="description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Seorang Backend Developer berpengalaman di Python, Laravel, dan FastAPI.">
   <meta name="keywords" content="Farhanudin, Backend Developer, Portofolio, Python, Laravel, FastAPI, SMK Wikrama, Web Developer">
-  <meta name="author" content="Muhamad Farhanudin" />
-  <meta name="robots" content="index, follow" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Farhanudin | Portofolio Backend Developer" />
-  <meta property="og:description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Berpengalaman membangun aplikasi Laravel, FastAPI, Python.">
-  <meta property="og:url" content="https://farhanudin26.github.io/" />
-  <meta property="og:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Farhanudin | Backend Developer" />
-  <meta name="twitter:description" content="Portofolio online Farhanudin, Backend Developer SMK Wikrama Bogor." />
-  <meta name="twitter:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg" />
+  <meta name="author" content="Muhamad Farhanudin">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://farhanudin26.github.io/">
 
-  <!-- Favicons -->
-  <link href="assets/img/log2.png" rel="icon">
-  <link href="assets/img/logo.jpg" rel="apple-touch-icon">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Farhanudin | Portofolio Backend Developer">
+  <meta property="og:description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Berpengalaman membangun aplikasi Laravel, FastAPI, Python.">
+  <meta property="og:url" content="https://farhanudin26.github.io/">
+  <meta property="og:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Farhanudin | Backend Developer">
+  <meta name="twitter:description" content="Portofolio online Farhanudin, Backend Developer SMK Wikrama Bogor.">
+  <meta name="twitter:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/log2.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.jpg">
+
+  <!-- Preconnect untuk performa font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -39,7 +46,31 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Structured Data / Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Muhamad Farhanudin",
+    "jobTitle": "Backend Developer",
+    "url": "https://farhanudin26.github.io/",
+    "sameAs": [
+      "https://github.com/farhanudin26"
+    ]
+  }
+  </script>
+
+  <!-- Google Analytics GA4 (Ganti G-XXXXXXXXXX dengan ID kamu) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L1T45DLFX7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-L1T45DLFX7');
+  </script>
 </head>
+
 
 <body>
 
