--- a/index.html
+++ b/index.html
@@ -2,41 +2,38 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Farhanudin | Backend Developer | Portofolio SMK Wikrama</title>
   <meta name="description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Seorang Backend Developer berpengalaman di Python, Laravel, dan FastAPI.">
   <meta name="keywords" content="Farhanudin, Backend Developer, Portofolio, Python, Laravel, FastAPI, SMK Wikrama, Web Developer">
-  <meta name="author" content="Muhamad Farhanudin">
-  <meta name="robots" content="index, follow">
+  <meta name="author" content="Muhamad Farhanudin" />
+  <meta name="robots" content="index, follow" />
 
   <!-- Open Graph (Facebook & LinkedIn) -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Farhanudin | Portofolio Backend Developer">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Farhanudin | Portofolio Backend Developer" />
   <meta property="og:description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Berpengalaman membangun aplikasi Laravel, FastAPI, Python.">
-  <meta property="og:url" content="https://farhanudin26.github.io/">
-  <meta property="og:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg">
+  <meta property="og:url" content="https://farhanudin26.github.io/" />
+  <meta property="og:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.webp" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Farhanudin | Backend Developer">
-  <meta name="twitter:description" content="Portofolio online Farhanudin, Backend Developer SMK Wikrama Bogor.">
-  <meta name="twitter:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.jpg">
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Farhanudin | Backend Developer" />
+  <meta name="twitter:description" content="Portofolio online Farhanudin, Backend Developer SMK Wikrama Bogor." />
+  <meta name="twitter:image" content="https://farhanudin26.github.io/assets/img/portfolio/profile-cv.webp" />
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/img/log2.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/img/logo.jpg">
+  <link rel="icon" href="assets/img/log2.png" type="image/png" />
+  <link rel="apple-touch-icon" href="assets/img/logo.jpg" />
 
-  <!-- Preload Hero Image (optimized) -->
-  <link rel="preload" as="image" href="assets/img/hero-bg.webp" type="image/webp">
+  <!-- Font Preload (Opsional) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
-  <!-- Google Fonts - optimized with display swap -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
+  <!-- Vendor CSS (Gabungkan dan minify jika perlu) -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -44,7 +41,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS (minified for performance) -->
+  <!-- Main CSS -->
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- Google Analytics -->
@@ -56,8 +53,6 @@
     gtag('config', 'G-L1T45DLFX7');
   </script>
 </head>
-
-
 
 <body>
 
