push update seo

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Farhanudin | Backend Developer | Portofolio SMK Wikrama</title>
+  <title>Muhamad Farhanudin | Backend Developer </title>
   <meta name="description" content="Portofolio Farhanudin, siswa SMK Wikrama Bogor. Seorang Backend Developer berpengalaman di Python, Laravel, dan FastAPI.">
-  <meta name="keywords" content="Farhanudin, Backend Developer, Portofolio, Python, Laravel, FastAPI, SMK Wikrama, Web Developer">
+  <meta name="keywords" content="Farhanudin, Backend Developer, Portofolio, Python, Laravel, FastAPI, SMK Wikrama, Web Developer,Muhamad Farhanudin">
   <meta name="author" content="Muhamad Farhanudin" />
   <meta name="robots" content="index, follow" />
 
