--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <span>Sertifikat</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
           <li><a
-              href="https://drive.usercontent.google.com/download?id=1_G54M3YH9Ddzs7RYPGhXYSB1j7GQDuRL&export=download&authuser=0"
+              href="https://export-download.canva.com/75DZ4/DAGoOh75DZ4/42/0-2293946131272146428.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAQYCGKMUH5AO7UJ26%2F20251218%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20251218T023908Z&X-Amz-Expires=35387&X-Amz-Signature=09bd32c70f16474d4b6e992334ebb0eaabac936b0f16d727023db6490e364254&X-Amz-SignedHeaders=host&response-content-disposition=attachment%3B%20filename%2A%3DUTF-8%27%27CV%2520Muhamad%2520Farhanudin.pdf&response-expires=Thu%2C%2018%20Dec%202025%2012%3A28%3A55%20GMT"
               class="btn btn-outline-primary">Download CV</a></li>
         </ul>
       </nav>
